# ChangeLog for sys-apps/cracklib-words
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/cracklib-words/ChangeLog,v 1.2 2006/12/30 02:27:53 vapier Exp $

  30 Dec 2006; Mike Frysinger <vapier@gentoo.org> cracklib-words-1.1.ebuild:
  Regenerate the cracklib dictionary in pkg_postinst from all dict files
  #114690 by Philippe Troin.

*cracklib-words-1.1 (12 Feb 2004)

  12 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by me.