@@ -6,10 +6,14 @@ EBUILD cracklib-words-1.1.ebuild 766 RMD160 fa68711c9368a40a00497a5a95ca836142fa
 MD5 0f25508b43dd92f3fee70f8850ed4b72 cracklib-words-1.1.ebuild 766
 RMD160 fa68711c9368a40a00497a5a95ca836142fa3f41 cracklib-words-1.1.ebuild 766
 SHA256 eb8e05fff25851899642afbd0e6c08cf4d22a07a9621bf8e2243b9b2b3ff3745 cracklib-words-1.1.ebuild 766
-MISC ChangeLog 529 RMD160 d2e3ad13a87c5d734fbaa0bfe268449af5e633ad SHA1 4c31bdbcabb02b5786dbe7745d0e4c38a2159d70 SHA256 4c1459d5323cc462c073ef98edfc9c9459980ccd8a8ae369d8228e89cb21c98f
-MD5 5268140097557080f68099cfdeee5e6c ChangeLog 529
-RMD160 d2e3ad13a87c5d734fbaa0bfe268449af5e633ad ChangeLog 529
-SHA256 4c1459d5323cc462c073ef98edfc9c9459980ccd8a8ae369d8228e89cb21c98f ChangeLog 529
+EBUILD cracklib-words-1.2.ebuild 779 RMD160 ae8152e6ddb71b7868472dbbb23b0132506ff750 SHA1 44cf655fa47dc25fa0ff7de6dae56c71b822a2cb SHA256 a0455007866678f0bf35828c5c7fed1d551a017e56699c0e4fce73e53e6efbfb
+MD5 40a024748ec71a3d8f9bf4ad7df609ea cracklib-words-1.2.ebuild 779
+RMD160 ae8152e6ddb71b7868472dbbb23b0132506ff750 cracklib-words-1.2.ebuild 779
+SHA256 a0455007866678f0bf35828c5c7fed1d551a017e56699c0e4fce73e53e6efbfb cracklib-words-1.2.ebuild 779
+MISC ChangeLog 661 RMD160 3b967722230f791df46da83f41983bb04302d4cf SHA1 f14b0256afdc9bba7ac4976d414199e67057fc7b SHA256 5b82f42459d03fbb7b0973f9f2d533d63c6b69354266d67d87ad757c03946613
+MD5 f13d18d341dd1800dd3ffaddfa42aad3 ChangeLog 661
+RMD160 3b967722230f791df46da83f41983bb04302d4cf ChangeLog 661
+SHA256 5b82f42459d03fbb7b0973f9f2d533d63c6b69354266d67d87ad757c03946613 ChangeLog 661
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
@@ -17,10 +21,13 @@ SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata
 MD5 4bc4e7c951f9f74fb2a15581dfd9dec8 files/digest-cracklib-words-1.1 235
 RMD160 ae6ef1fadbf3460e0ecc38975234c84ac8f2f04d files/digest-cracklib-words-1.1 235
 SHA256 a4503c706a8f95501ab8dbbad6d445d045620bf0eeefdaa353ca4a3a5c886f1f files/digest-cracklib-words-1.1 235
+MD5 4bc4e7c951f9f74fb2a15581dfd9dec8 files/digest-cracklib-words-1.2 235
+RMD160 ae6ef1fadbf3460e0ecc38975234c84ac8f2f04d files/digest-cracklib-words-1.2 235
+SHA256 a4503c706a8f95501ab8dbbad6d445d045620bf0eeefdaa353ca4a3a5c886f1f files/digest-cracklib-words-1.2 235
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.8 (GNU/Linux)
 
-iD8DBQFFlc7n8bi6rjpTunYRAgUJAKCy5CBhjAFz2aanEfXvwN0fxxfpBACcCc+H
-/F2cVGDNHRXMKQo/bLuzMqE=
-=UQA2
+iEYEARECAAYFAkd+si8ACgkQj9hvisErhMKRkgCgyQOLf5fjH9qAziAxcWPuEXDf
+hvsAoOC6d+WAOeIYVLmHC5i8BzhvGb+0
+=fqjh
 -----END PGP SIGNATURE-----
