@@ -1,0 +1,3 @@
+MD5 575a44add4db95b43c7abb46b307950f cracklib-words.gz 4559371
+RMD160 ff94566ba5b5068064c0ed094480adec91e4ad24 cracklib-words.gz 4559371
+SHA256 59b684a93ba98fa1aae1006762b25d06c2e0e51d84f61ceff6dc1fbc0b6dc374 cracklib-words.gz 4559371
