@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/cracklib-words
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/cracklib-words/ChangeLog,v 1.2 2006/12/30 02:27:53 vapier Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/cracklib-words/ChangeLog,v 1.3 2008/01/04 22:24:39 vapier Exp $
+
+*cracklib-words-1.2 (04 Jan 2008)
+
+  04 Jan 2008; Mike Frysinger <vapier@gentoo.org>
+  +cracklib-words-1.2.ebuild:
+  Version bump.
 
   30 Dec 2006; Mike Frysinger <vapier@gentoo.org> cracklib-words-1.1.ebuild:
   Regenerate the cracklib dictionary in pkg_postinst from all dict files
